--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "next": "12.1.4",
+    "next-common-props": "^1.0.21",
     "react": "18.0.0",
     "react-dom": "18.0.0"
   },
